Messgaes are added and profile modify is changed.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,8 @@
-pageTitle=Online nyelvtanulás
+pagetitle = Online nyelvtanulás
+pagetitle.errorpage = Online nyelvtanulás hiba oldal
+pagetitle.login = Online nyelvtanulás - Bejelentkezés
+pagetitle.activation = Online nyelvtanulás - Aktiválás
+pagetitle.forgotten_password_activation = Online nyelvtanulás - Elfelejtett jelszó aktiválás
+pagetitle.forgotten_password = Online nyelvtanulás - Elfelejtett jelszó
+pagetitle.profile = Online nyelvtanulás - Profil adatok
+pagetitle.registration = Online nyelvtanulás - Regisztráció
