--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,1 +1,8 @@
-pageTitle=Online Language Learning
+pagetitle = Online Language Learning
+pagetitle.errorpage = Online Language Learning Error Page
+pagetitle.login = Online Language Learning - Login
+pagetitle.activation = Online Language Learning - Activation
+pagetitle.forgotten_password_activation = Online Language Learning - Forgotten Password Activation
+pagetitle.forgotten_password = Online Language Learning - Forgotten Password
+pagetitle.profile = Online Language Learning - Profile data
+pagetitle.registration = Online Language Learning - Registration
